--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
       <td><input type="text"></td>
     </tr>
     <tr>
-      <td><input type="text"></td>
+      <td<input type="text"></td>
       <td><input type="text"></td>
       <td><input type="text"></td>
     </tr>
@@ -75,11 +75,5 @@
       </td>
     </tr>
   </table>
-  <P>Watch our videos for more Information</P>
-<iframe width="400" height="210"
- src="https://www.youtube.com/embed/Nj6HbnvOiow" 
-title="Dynapaharm " frameborder="0" allow="accelerometer; autoplay; clipboard-write;
- encrypted-media; gyroscope; picture-in-picture; web-share" 
- referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
